--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content="zhloong的博客">
     <meta name="description" content="在这里你可以记录、分享自己的工作感悟和生活心得">
     <link rel="shortcut icon" href="./static/favicon.ico" type="image/x-icon" />
-    <title>ForFun Find Yourself</title>
+    <title>zhloong的博客</title>
   </head>
   <body>
     <div id="app"></div>
